fix dark mode bug

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -38,7 +38,6 @@
             font-weight: 600;
             position: relative;
             margin-right: 20px;  
-            color: var(--text-light);
           }
         }
       }
